# TCC

./: .gitignore  Makefile  pyproject.toml
.environment/: .postgres
Backend/: .gitignore  Dockerfile  Makefile  compose.yaml  docker-compose.yml  pyproject.toml
Backend/.environment/: .env.django  .env.django.example  .env.postgres
Backend/apiTCC/: settings.py  urls.py
Backend/core/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
Backend/core/migrations/: 0001_initial.py  0002_batchesresults_delete_result.py  0003_rename_batchesresults_batchresult.py  0004_session_duration.py  0005_session_status.py  0006_alter_session_status.py  0007_alter_session_status.py  0008_alter_session_duration_alter_session_status.py  0009_remove_batchresult_timestamp_player_player_code.py  0010_rename_batchresult_result_alter_session_status.py  0011_alter_result_session.py  0012_alter_session_duration.py  0013_game_link.py
Backend/core/tests/: tests_models.py  tests_serializers.py  tests_views.py
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: main.tsx
Frontend/src/api/: axios.ts
Frontend/src/components/Button/: index.tsx  style.ts
Frontend/src/components/Card/: index.tsx  (+1 more)
Frontend/src/context/: AuthProvider.tsx
Frontend/src/routes/: AppRoutes.tsx
Frontend/src/schemas/: loginSchema.ts  signUpSchema.ts
Frontend/src/styles/: GlobalStyles.ts
Frontend/src/utils/: pdfExport.ts
Frontend/tcc-frontend/: package.json
apiTCC/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
(+27 files in other folders)
